--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,10 @@
   font-family: "Poppins";
 }
 :root {
-  --bg-color: #080808;
+  --bg-color: #1c2321;
   --second-bg-color: #101010;
   --text-color: white;
-  --main-color: #ea580c;
+  --main-color: #0047ab;
 }
 
 html {
@@ -51,7 +51,7 @@ body {
   transform: scale(1.1);
 }
 span {
-  background: linear-gradient(270deg, #df8908 10%, #ff1d15 100%);
+  background: linear-gradient(270deg, #0047ab 10%, #7d98a1 100%);
   background-clip: text;
   color: transparent;
 }
@@ -72,7 +72,7 @@ span {
   font-size: 1.8rem;
   padding: 1rem 2rem;
   border-radius: 3rem;
-  background: linear-gradient(270deg, #df8908 10%, #ff1d15 100%);
+  background: linear-gradient(270deg, #0047ab 10%, #7d98a1 100%);
   letter-spacing: 1px;
   cursor: pointer;
   transition: 0.3 ease-in-out;
@@ -114,7 +114,7 @@ section {
 }
 
 .home-content p {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   font-weight: 500;
   line-height: 1.8;
 }
@@ -128,6 +128,7 @@ section {
   box-shadow: 0 0 25px var(--main-color), 0 0 50px var(--main-color),
     0 0 100px var(--main-color);
 }
+
 .social-icons a {
   display: inline-flex;
   justify-content: center;
@@ -140,6 +141,8 @@ section {
   color: var(--main-color);
   margin: 3rem 0.5rem;
   transition: 0.3s ease-in-out;
+  width: 100px;
+  height: 100px;
 }
 .social-icons a:hover {
   color: var(--text-color);
@@ -188,8 +191,11 @@ section {
 }
 .about-img img {
   width: 32vw;
-  border: 50%;
+  height: 32vw;
+
   border-radius: 50%;
+  object-fit: cover;
+
   box-shadow: 0 0 25px var(--main-color);
   transition: 0.4s ease-in-out;
 }
@@ -202,7 +208,8 @@ section {
   text-align: left;
 }
 .about-content p {
-  font-size: 1.8rem;
+  font-size: 2.8rem;
+  line-height: 1.4;
 }
 
 .about-content .btn {
@@ -261,9 +268,9 @@ section {
   font-weight: 800;
 }
 .service-info p {
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   font-weight: 600;
-  line-height: 1.7;
+  line-height: 1.3;
 }
 
 .service-info {
@@ -304,12 +311,102 @@ section {
 }
 .project-card img {
   max-width: 300px;
-  border-radius: 3em;
+  border-radius: 1em;
   object-fit: cover;
 }
 .project-card h3 {
   font-size: 3rem;
 }
 .project-card {
-  font-size: 1.6rem;
+  font-size: 2em;
+  line-height: 1.7;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icons a img {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  padding: 1rem;
+  background: transparent;
+  border: 2px solid var(--main-color);
+  border-radius: 50%;
+  color: var(--main-color);
+  margin: 3rem 0.5rem;
+  transition: 0.3s ease-in-out;
+  width: 100px;
+  height: 100px;
+}
+@media (min-width: 800px) {
+  .service-info p {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1.3;
+  }
+}
+@media (max-width: 1300px) {
+  #menu-icon {
+    display: block;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 50%;
+    padding: 1rem 3rem;
+    background: rgba(0, 0, 0, 0.8);
+    border-bottom-left-radius: 2rem;
+    border-left: 2px solid var(--main-color);
+    border-bottom: 2px solid var(--main-color);
+    display: none;
+  }
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+    color: var(--text-color);
+  }
+  .navbar.active {
+    display: block;
+  }
+  .header img {
+    width: 30px;
+    height: auto;
+    cursor: pointer;
+  }
+
+  .gradient-btn {
+    display: none;
+  }
+  .home {
+    flex-direction: column-reverse;
+    margin: 5rem 0;
+    gap: 5rem;
+  }
+  .home-content {
+    align-items: center;
+    text-align: center;
+  }
+  .home-img img {
+    width: 56vw;
+  }
+  .about {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .about h2 {
+    text-align: center;
+    margin: 2rem 0;
+  }
+
+  .contact {
+    justify-content: center;
+  }
 }
